haproxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: bitnami/haproxy:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: haproxy-config-volume
          mountPath: /bitnami/haproxy/conf/haproxy.cfg
          subPath: haproxy.cfg
      volumes:
      - name: haproxy-config-volume
        configMap:
          name: haproxy-config
