haproxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
spec:
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
