haproxy-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  # name: haproxy-route
  name: haproxy
spec:
  to:
    kind: Service
    name: haproxy-service
  port:
    targetPort: 8080
