laravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: royalnavy/laravel-image:2.9
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app: laravel
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: laravel
spec:
  to:
    kind: Service
    name: laravel
  port:
    targetPort: http
